setting up AWS config files

--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,7 @@ config/youtube.config.js
 sampleYouTubeResponse.js
 public/bundle.js
 mongod.log
+# Elastic Beanstalk Files
+.elasticbeanstalk/*
+!.elasticbeanstalk/*.cfg.yml
+!.elasticbeanstalk/*.global.yml
