--- a/package.json
+++ b/package.json
@@ -8,10 +8,8 @@
     "node": ">=6.13.0"
   },
   "scripts": {
-    "start-dev": "nodemon start server/index.js",
     "runDev": "nodemon server/index.js",
-    "start": "forever start server/index.js",
-    "stopForever": "forever stopall"
+    "start": "node server/index.js"
   },
   "dependencies": {
     "express": "^4.16.4",
